--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -46,8 +46,15 @@ jobs:
           wait-for-processing: true
 
       - name: Run tests
+        # only if it is not a fork
+        if: ${{ github.event.pull_request.head.repo.full_name == github.repository }}
         uses: willcaul/jest-github-action@v4
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           test-command: "yarn test"
+
+      - name: Run tests (no report)
+        # only if it is not a fork
+        if: ${{ github.event.pull_request.head.repo.full_name != github.repository }}
+        run: yarn test
