--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
         "react-native-fs": "^2.20.0",
         "react-native-get-random-values": "^1.11.0",
         "react-native-linear-gradient": "^2.8.3",
+        "react-native-localize": "^3.3.0",
         "react-native-logs": "^5.3.0",
         "react-native-markdown-display": "^7.0.2",
         "react-native-mmkv": "~2.12.2",
