--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -48,7 +48,8 @@ jobs:
 
       - name: Run tests
         # only if it is not a fork
-        if: ${{ github.event.pull_request.head.repo.full_name == github.repository }}
+        if: ${{ github.event.pull_request.head.repo.full_name == github.repository || github.event_name == 'push' }}
+        id: test
         uses: willcaul/jest-github-action@v4
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -57,7 +58,8 @@ jobs:
 
       - name: Run tests (no report)
         # only if it is not a fork
-        if: ${{ github.event.pull_request.head.repo.full_name != github.repository }}
+        id: test-no-report
+        if: ${{ github.event.pull_request.head.repo.full_name != github.repository && steps.test.outcome != 'success' }}
         run: yarn test
 
       - name: Fail if ESLint errors
