--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -16,6 +16,7 @@ updates:
       - dependency-name: "react-native"
       - dependency-name: "@react-native/*"
       - dependency-name: "react"
+      - dependency-name: "react-test-renderer"
     groups:
       production-dependencies:
         dependency-type: "production"
