--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "pod-install": "cd ios && pod install"
     },
     "dependencies": {
+        "@devvie/bottom-sheet": "^0.4.3",
         "@octokit/rest": "^21.0.2",
         "@os-team/i18next-react-native-language-detector": "^1.1.5",
         "@pchmn/expo-material3-theme": "^1.3.2",
@@ -62,7 +63,6 @@
         "react": "18.3.1",
         "react-i18next": "^15.2.0",
         "react-native": "0.76.5",
-        "react-native-animated-bottom-drawer": "^0.0.23",
         "react-native-charts-wrapper": "^0.6.0",
         "react-native-config": "^1.5.3",
         "react-native-fast-image": "^8.6.3",
@@ -112,6 +112,7 @@
         "@react-native/typescript-config": "0.76.5",
         "@testing-library/react-native": "^12.9.0",
         "@trivago/prettier-plugin-sort-imports": "^5.2.0",
+        "@types/color": "^4.2.0",
         "@types/jest": "^29.5.14",
         "@types/markdown-it": "^14.1.2",
         "@types/npm-license-crawler": "^0.2.3",
@@ -121,9 +122,11 @@
         "@types/react-test-renderer": "^18.3.0",
         "@types/styled-components": "^5.1.34",
         "@types/uuid": "^10.0.0",
+        "@typescript-eslint/eslint-plugin": "^7.18.1-alpha.3",
+        "@typescript-eslint/parser": "^7.18.1-alpha.3",
         "babel-jest": "^29.7.0",
         "babel-plugin-module-resolver": "^5.0.2",
-        "eslint": "^8.57.0",
+        "eslint": "^8",
         "eslint-import-resolver-typescript": "^3.7.0",
         "eslint-plugin-import": "^2.31.0",
         "eslint-plugin-no-relative-import-paths": "^1.5.5",
@@ -136,7 +139,7 @@
         "react-native-version": "4.0.0",
         "react-test-renderer": "18.3.1",
         "ts-jest": "^29.2.5",
-        "typescript": "5.6.3"
+        "typescript": "^5 <5.6.0"
     },
     "engines": {
         "node": ">=18"
