--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
         "react-native-paper": "5.13.1",
         "react-native-paper-dates": "^0.22.34",
         "react-native-reanimated": "^3.17.1",
-        "react-native-safe-area-context": "^5.2.0",
+        "react-native-safe-area-context": "5.0.0",
         "react-native-screens": "^4.9.1",
         "react-native-share": "^12.0.9",
         "react-native-simple-gauge": "^0.3.1",
