--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -19,6 +19,7 @@ updates:
       - dependency-name: "react"
       - dependency-name: "react-test-renderer"
       - dependency-name: "typescript"
+      - dependency-name: "expo"
     groups:
       production-dependencies:
         dependency-type: "production"
