--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
         "translations:pull": "bash -c \"pushd src/translations/translation-files ; git pull ; popd\"",
         "precommit-hooks": "bash -c \".git/hooks/pre-commit\"",
         "fix-imports": "./fix-imports.mjs",
-        "pod-install": "cd ios && pod install"
+        "pod-install": "cd ios && RCT_NEW_ARCH_ENABLED=1 bundle exec pod install"
     },
     "dependencies": {
         "@octokit/rest": "^22.0.0",
@@ -72,7 +72,7 @@
         "react-native-localize": "^3.4.2",
         "react-native-logs": "^5.3.0",
         "react-native-markdown-display": "^7.0.2",
-        "react-native-mmkv": "~2.12.2",
+        "react-native-mmkv": "~3.3.0",
         "react-native-paper": "5.14.5",
         "react-native-paper-dates": "^0.22.47",
         "react-native-reanimated": "^3.16.7",
