--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -11,6 +11,7 @@ on:
 jobs:
   test:
     name: Run Tests
+    if: false # disable for now
     runs-on: ubuntu-latest
     permissions:
       actions: read
