--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
         "react-native-toast-message": "^2.3.3",
         "react-native-url-polyfill": "^2.0.0",
         "react-native-vector-icons": "^10.3.0",
+        "react-native-worklets": "^0.5.1",
         "react-native-zeroconf": "^0.13.8",
         "react-redux": "^9.2.0",
         "redux": "^5.0.1",
