--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -20,6 +20,7 @@ updates:
       - dependency-name: "react-test-renderer"
       - dependency-name: "typescript"
       - dependency-name: "expo"
+      - dependency-name: "react-native-config"
     groups:
       production-dependencies:
         dependency-type: "production"
