--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "@react-native-clipboard/clipboard": "^1.16.0",
         "@react-native-community/netinfo": "^11.3.3",
         "@react-native-masked-view/masked-view": "^0.3.2",
+        "@react-native/new-app-screen": "0.81.4",
         "@react-navigation/bottom-tabs": "^7.4.7",
         "@react-navigation/native": "^7.1.17",
         "@react-navigation/native-stack": "^7.3.26",
@@ -46,7 +47,7 @@
         "@shopify/flash-list": "^2.0.3",
         "base-64": "^1.0.0",
         "compare-versions": "^6.1.1",
-        "expo": "53.0.17",
+        "expo": "54.0.10",
         "fast-deep-equal": "^3.1.3",
         "fuse.js": "^7.1.0",
         "i18next": "^25.5.2",
@@ -59,11 +60,11 @@
         "postinstall-postinstall": "^2.1.0",
         "pretty-bytes": "^7.1.0",
         "prometheus-query": "^3.5.1",
-        "react": "19.0.0",
+        "react": "19.1.0",
         "react-i18next": "^15.7.3",
-        "react-native": "0.79.0",
+        "react-native": "0.81.4",
         "react-native-charts-wrapper": "^0.6.0",
-        "react-native-config": "^1.5.9",
+        "react-native-config": "1.5.6",
         "react-native-fast-image": "^8.6.3",
         "react-native-flex-layout": "^0.1.5",
         "react-native-fs": "^2.18.0",
@@ -72,11 +73,11 @@
         "react-native-localize": "^3.5.2",
         "react-native-logs": "^5.5.0",
         "react-native-markdown-display": "^7.0.2",
-        "react-native-mmkv": "~3.3.0",
+        "react-native-mmkv": "~3.3.3",
         "react-native-paper": "5.14.5",
         "react-native-paper-dates": "^0.22.50",
         "react-native-reanimated": "^4.1.0",
-        "react-native-safe-area-context": "^5.6.1",
+        "react-native-safe-area-context": "^5.5.2",
         "react-native-screens": "^4.16.0",
         "react-native-share": "^12.2.0",
         "react-native-simple-gauge": "^0.3.1",
@@ -102,14 +103,14 @@
         "@babel/runtime": "^7.28.4",
         "@microsoft/eslint-formatter-sarif": "^3.1.0",
         "@octokit/webhooks-types": "^7.6.1",
-        "@react-native-community/cli": "18.0.0",
-        "@react-native-community/cli-platform-android": "18.0.0",
-        "@react-native-community/cli-platform-ios": "18.0.0",
-        "@react-native/babel-preset": "0.79.0",
-        "@react-native/eslint-config": "0.79.0",
-        "@react-native/gradle-plugin": "0.79.0",
-        "@react-native/metro-config": "0.79.0",
-        "@react-native/typescript-config": "0.79.5",
+        "@react-native-community/cli": "20.0.0",
+        "@react-native-community/cli-platform-android": "20.0.0",
+        "@react-native-community/cli-platform-ios": "20.0.0",
+        "@react-native/babel-preset": "0.81.4",
+        "@react-native/eslint-config": "0.81.4",
+        "@react-native/gradle-plugin": "0.81.4",
+        "@react-native/metro-config": "0.81.4",
+        "@react-native/typescript-config": "0.81.4",
         "@trivago/prettier-plugin-sort-imports": "^5.2.2",
         "@types/color": "^4.2.0",
         "@types/markdown-it": "^14.1.2",
@@ -134,10 +135,10 @@
         "prettier": "^3.6.2",
         "react-native-version": "4.0.0",
         "react-test-renderer": "19.0.0",
-        "typescript": "^5 <5.6.0"
+        "typescript": "^5.8.3"
     },
     "engines": {
-        "node": ">=18"
+        "node": ">=20"
     },
     "packageManager": "yarn@4.4.1",
     "expo": {
