--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,34 @@
 {
-  "extends": "@react-native/typescript-config/tsconfig.json",
-  "compilerOptions": {
-    "baseUrl": ".",
-    "paths": {
-      "@/*": ["src/*"],
-      "@root/*": ["*"],
+    "extends": "@react-native/typescript-config/tsconfig.json",
+    "compilerOptions": {
+        "baseUrl": ".",
+        "paths": {
+            "@/*": [
+                "src/*"
+            ],
+            "@root/*": [
+                "*"
+            ]
+        },
+        "types": [
+            "react-native",
+            "node"
+        ],
+        "skipLibCheck": true,
+        "allowImportingTsExtensions": false,
+        "resolvePackageJsonExports": true
     },
-    "types": ["react-native", "node"],
-    "skipLibCheck": true,
-    "allowImportingTsExtensions": false,
-    "resolvePackageJsonExports": true
-  },
-  "exclude": [
-    "node_modules",
-    "babel.config.js",
-    "metro.config.js",
-    "jest.config.js",
-    "jest.setup.js",
-    ".prettierrc.js"
-  ]
+    "include": [
+        "**/*.ts",
+        "**/*.tsx"
+    ],
+    "exclude": [
+        "**/node_modules",
+        "**/Pods",
+        "babel.config.js",
+        "metro.config.js",
+        "jest.config.js",
+        "jest.setup.js",
+        ".prettierrc.js"
+    ]
 }
