--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -132,7 +132,7 @@ android {
             reset()
             enable true
             universalApk true
-            include "armeabi-v7a", "arm64-v8a", "x86_64"
+            include "armeabi-v7a", "arm64-v8a"
         }
     }
 }
