--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -41,7 +41,7 @@ jobs:
         continue-on-error: true
         id: eslint
         run: |
-          yarn lint --max-warnings=0 --format @microsoft/eslint-formatter-sarif --output-file eslint-results.sarif
+          SARIF_ESLINT_IGNORE_SUPPRESSED=true yarn lint --max-warnings=0 --format @microsoft/eslint-formatter-sarif --output-file eslint-results.sarif
 
       - name: Upload ESLint analysis results to GitHub
         uses: github/codeql-action/upload-sarif@v3
