--- a/.bundle/config
+++ b/.bundle/config
@@ -1,6 +1,3 @@
 ---
-BUNDLE_PATH: "/Users/runner/work/opendtu-react-native/opendtu-react-native/vendor/bundle"
-BUNDLE_FORCE_RUBY_PLATFORM: "1"
-BUNDLE_DEPLOYMENT: "true"
-BUNDLE_FROZEN: "true"
-BUNDLE_JOBS: "4"
+BUNDLE_PATH: "vendor/bundle"
+BUNDLE_FORCE_RUBY_PLATFORM: 1
