--- a/package.json
+++ b/package.json
@@ -156,6 +156,7 @@
     "resolutions": {
         "use-latest-callback": "0.2.3",
         "markdown-it": "^14.0.0",
-        "@types/markdown-it": "^14.0.1"
+        "@types/markdown-it": "^14.0.1",
+        "color": "^5"
     }
 }
