--- a/package.json
+++ b/package.json
@@ -87,14 +87,14 @@
         "react-native-svg": "^15.15.2",
         "react-native-toast-message": "^2.3.3",
         "react-native-url-polyfill": "^3.0.0",
+        "react-native-uuid": "^2.0.3",
         "react-native-vector-icons": "^10.3.0",
         "react-native-worklets": "^0.7.2",
         "react-native-zeroconf": "^0.14.0",
         "react-redux": "^9.2.0",
         "redux": "^5.0.1",
         "redux-persist": "^6.0.0",
-        "styled-components": "^6.3.8",
-        "uuid": "^13.0.0"
+        "styled-components": "^6.3.8"
     },
     "devDependencies": {
         "@babel/core": "^7.28.6",
@@ -120,7 +120,6 @@
         "@types/react-native-zeroconf": "^0.13.1",
         "@types/react-test-renderer": "^19.0.0",
         "@types/styled-components": "^5.1.36",
-        "@types/uuid": "^11.0.0",
         "@typescript-eslint/eslint-plugin": "^8.53.1",
         "@typescript-eslint/parser": "^8.53.1",
         "babel-plugin-module-resolver": "^5.0.2",
